--- a/index.html
+++ b/index.html
@@ -9,23 +9,33 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="content">
-            <h1 class="titulo">Supermercado Batista</h1>
-            <h2>Login</h2>
-            <form id="loginForm">
-                <div class="form-group">
-                    <input type="email" id="Email" name="Email" placeholder="Email" required>
-                </div>
+    <div class="wrapper">
+        <div class="container">
+            <div class="content">
+                <h1 class="titulo">Supermercado Batista</h1>
+                <h2>Login</h2>
+                <form id="loginForm">
+                    <div class="form-group">
+                        <input type="email" id="Email" name="Email" placeholder="Email" required>
+                    </div>
 
-                <div class="form-group">
-                    <input type="password" id="Senha" name="Senha" placeholder="Senha" required>
-                </div>
+                    <div class="form-group">
+                        <input type="password" id="Senha" name="Senha" placeholder="Senha" required>
+                    </div>
 
-                <div class="form-group">
-                    <input type="submit" value="Entrar">
-                </div>
-            </form>
+                    <div class="form-group">
+                        <input type="submit" value="Entrar">
+                    </div>
+
+                    <div class="form-group">
+                        <a href="#" class="forgot-password">Esqueci minha senha</a>
+                    </div>
+                </form>
+            </div>
+
+            <div class="footer">
+                Carlos Frederico dos Santos Pellegrini
+            </div>
         </div>
     </div>
 
