--- a/TelaInicial/telaInicial.html
+++ b/TelaInicial/telaInicial.html
@@ -13,5 +13,56 @@
         <div class="logo">Supermercado Batista</div>
         <button class="logout-btn">Sair</button>
     </header>
+
+    <div class="container">
+        <div class="rectangle">
+          <div class="emoji">📊</div>
+          <div class="content">
+            <h1 class="title">Cadastro e Gerenciamento de Dados</h1>
+            <p class="explanation">Produtos · Clientes · Operações Fiscais · Empresas · Fornecedores · etc</p>
+          </div>
+        </div>
+
+        <div class="rectangle">
+          <div class="emoji">💰</div>
+          <div class="content">
+            <h1 class="title">Operações Financeiras</h1>
+            <p class="explanation">Movimentação financeira · Fechamento de Caixa</p>
+          </div>
+        </div>
+
+        <div class="rectangle">
+          <div class="emoji">⚡️</div>
+          <div class="content">
+            <h1 class="title">Vendas e Relatórios</h1>
+            <p class="explanation">Relatórios de Posição de Venda · PDV · Integração de e-Commerce</p>
+          </div>
+        </div>
+
+        <div class="rectangle">
+          <div class="emoji">💼</div>
+          <div class="content">
+            <h1 class="title">Orçamentos e Notas Fiscais</h1>
+            <p class="explanation">Operações de orçamento · Notas Fiscais</p>
+          </div>
+        </div>
+
+        <div class="rectangle">
+          <div class="emoji">⚙️</div>
+          <div class="content">
+            <h1 class="title">Gerenciamento de Serviços</h1>
+            <p class="explanation">Ordem de Serviços</p>
+          </div>
+        </div>
+
+        <div class="rectangle">
+          <div class="emoji">📊</div>
+          <div class="content">
+            <h1 class="title">Relatórios e Administração</h1>
+            <p class="explanation">Gerador de Relatórios · Guias de Recolhimento</p>
+          </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
