--- a/TelaInicial/telaInicial.html
+++ b/TelaInicial/telaInicial.html
@@ -5,21 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Tela Inicial</title>
+    <title>Supermercado Batista | Gestão </title>
 </head>
 
 <body>
-    <header class="header">
-        <div class="logo">Supermercado Batista</div>
-        <button class="logout-btn">Sair</button>
-    </header>
+  <header class="header">
+    <button class="back-btn">Voltar</button>
+    <div class="logo">Supermercado Batista</div>
+    <button class="logout-btn">Sair</button>
+</header>
+
+<h1 class="titulodapag">Sistema de Gestão</h1>
 
     <div class="container">
         <div class="rectangle">
           <div class="emoji">📊</div>
           <div class="content">
             <h1 class="title">Cadastro e Gerenciamento de Dados</h1>
-            <p class="explanation">Produtos · Clientes · Operações Fiscais · Empresas · Fornecedores · etc</p>
+            <p class="explanation">Produtos · Clientes · Operações Fiscais · Empresas · Fornecedores · Planos de Contas · Serviços · Funcionários · Transportadoras</p>
           </div>
         </div>
 
@@ -56,7 +59,7 @@
         </div>
 
         <div class="rectangle">
-          <div class="emoji">📊</div>
+          <div class="emoji">📝</div>
           <div class="content">
             <h1 class="title">Relatórios e Administração</h1>
             <p class="explanation">Gerador de Relatórios · Guias de Recolhimento</p>
