--- a/TelaInicial/telaInicial.html
+++ b/TelaInicial/telaInicial.html
@@ -1,71 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Supermercado Batista | Gestão </title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Supermercado Batista | Gestão</title>
 </head>
 
 <body>
   <header class="header">
-    <button class="back-btn">Voltar</button>
     <div class="logo">Supermercado Batista</div>
     <button class="logout-btn">Sair</button>
-</header>
+  </header>
 
-<h1 class="titulodapag">Sistema de Gestão</h1>
+  <h1 class="titulodapag">Sistema de Gestão</h1>
 
-    <div class="container">
-        <div class="rectangle">
-          <div class="emoji">📊</div>
-          <div class="content">
-            <h1 class="title">Cadastro e Gerenciamento de Dados</h1>
-            <p class="explanation">Produtos · Clientes · Operações Fiscais · Empresas · Fornecedores · Planos de Contas · Serviços · Funcionários · Transportadoras</p>
-          </div>
+  <div class="container">
+    <a href="CadastroeGerenciamentodeDados/index.html">
+      <div class="rectangle" id="cadastroDiv">
+        <div class="emoji">📊</div>
+        <div class="content">
+          <h1 class="title">Cadastro e Gerenciamento de Dados</h1>
+          <p class="explanation">Produtos · Clientes · Operações Fiscais · Empresas · Fornecedores · Planos de Contas ·
+            Serviços · Funcionários · Transportadoras</p>
         </div>
+      </div>
+    </a>
 
-        <div class="rectangle">
-          <div class="emoji">💰</div>
-          <div class="content">
-            <h1 class="title">Operações Financeiras</h1>
-            <p class="explanation">Movimentação financeira · Fechamento de Caixa</p>
-          </div>
+    <a href="OperacoesFinanceiras/index.html">
+      <div class="rectangle">
+        <div class="emoji">💰</div>
+        <div class="content">
+          <h1 class="title">Operações Financeiras</h1>
+          <p class="explanation">Movimentação financeira · Fechamento de Caixa</p>
         </div>
+      </div>
+    </a>
 
-        <div class="rectangle">
-          <div class="emoji">⚡️</div>
-          <div class="content">
-            <h1 class="title">Vendas e Relatórios</h1>
-            <p class="explanation">Relatórios de Posição de Venda · PDV · Integração de e-Commerce</p>
-          </div>
+    <a href="VendaseRelatorios/index.html">
+      <div class="rectangle">
+        <div class="emoji">⚡️</div>
+        <div class="content">
+          <h1 class="title">Vendas e Relatórios</h1>
+          <p class="explanation">Relatórios de Posição de Venda · PDV · Integração de e-Commerce</p>
         </div>
+      </div>
+    </a>
 
-        <div class="rectangle">
-          <div class="emoji">💼</div>
-          <div class="content">
-            <h1 class="title">Orçamentos e Notas Fiscais</h1>
-            <p class="explanation">Operações de orçamento · Notas Fiscais</p>
-          </div>
+    <a href="OrcamentoseNotasFiscais/index.html">
+      <div class="rectangle">
+        <div class="emoji">💼</div>
+        <div class="content">
+          <h1 class="title">Orçamentos e Notas Fiscais</h1>
+          <p class="explanation">Operações de orçamento · Notas Fiscais</p>
         </div>
+      </div>
+    </a>
 
-        <div class="rectangle">
-          <div class="emoji">⚙️</div>
-          <div class="content">
-            <h1 class="title">Gerenciamento de Serviços</h1>
-            <p class="explanation">Ordem de Serviços</p>
-          </div>
+    <a href="GerenciamentodeServicos/index.html">
+      <div class="rectangle">
+        <div class="emoji">⚙️</div>
+        <div class="content">
+          <h1 class="title">Gerenciamento de Serviços</h1>
+          <p class="explanation">Ordem de Serviços</p>
         </div>
+      </div>
+    </a>
 
-        <div class="rectangle">
-          <div class="emoji">📝</div>
-          <div class="content">
-            <h1 class="title">Relatórios e Administração</h1>
-            <p class="explanation">Gerador de Relatórios · Guias de Recolhimento</p>
-          </div>
+    <a href="RelatoriosAdministracao/index.html">
+      <div class="rectangle">
+        <div class="emoji">📝</div>
+        <div class="content">
+          <h1 class="title">Relatórios e Administração</h1>
+          <p class="explanation">Gerador de Relatórios · Guias de Recolhimento</p>
         </div>
-    </div>
-    <script src="script.js"></script>
+      </div>
+    </a>
+  </div>
+  <script src="script.js"></script>
 </body>
+
 </html>
