--- a/TelaInicial/CadastroeGerenciamentodeDados/index.html
+++ b/TelaInicial/CadastroeGerenciamentodeDados/index.html
@@ -21,51 +21,85 @@
     <div class="rectangle">
       <span class="emoji">📦</span>
       <h2 class="title">Produtos</h2>
+      <div class="options">
+        <a class="option cadastrar" href="#">Cadastrar</a>
+        <a class="option consultar" href="#">Consultar</a>
+      </div>
     </div>
 
     <div class="rectangle">
       <span class="emoji">👥</span>
       <h2 class="title">Clientes</h2>
+      <div class="options">
+        <a class="option cadastrar" href="#">Cadastrar</a>
+        <a class="option consultar" href="#">Consultar</a>
+      </div>
     </div>
 
     <div class="rectangle">
       <span class="emoji">💼</span>
       <h2 class="title">Operações Fiscais</h2>
+      <div class="options">
+        <a class="option cadastrar" href="#">Cadastrar</a>
+        <a class="option consultar" href="#">Consultar</a>
+      </div>
     </div>
 
     <div class="rectangle">
       <span class="emoji">🏢</span>
       <h2 class="title">Empresas</h2>
+      <div class="options">
+        <a class="option cadastrar" href="#">Cadastrar</a>
+        <a class="option consultar" href="#">Consultar</a>
+      </div>
     </div>
 
     <div class="rectangle">
       <span class="emoji">🚚</span>
       <h2 class="title">Fornecedores</h2>
+      <div class="options">
+        <a class="option cadastrar" href="#">Cadastrar</a>
+        <a class="option consultar" href="#">Consultar</a>
+      </div>
     </div>
 
     <div class="rectangle">
       <span class="emoji">📊</span>
       <h2 class="title">Plano de Contas</h2>
+      <div class="options">
+        <a class="option cadastrar" href="#">Cadastrar</a>
+        <a class="option consultar" href="#">Consultar</a>
+      </div>
     </div>
 
     <div class="rectangle">
       <span class="emoji">🛠️</span>
       <h2 class="title">Serviços</h2>
+      <div class="options">
+        <a class="option cadastrar" href="#">Cadastrar</a>
+        <a class="option consultar" href="#">Consultar</a>
+      </div>
     </div>
 
     <div class="rectangle">
       <span class="emoji">👨‍💼</span>
       <h2 class="title">Funcionários</h2>
+      <div class="options">
+        <a class="option cadastrar" href="#">Cadastrar</a>
+        <a class="option consultar" href="#">Consultar</a>
+      </div>
     </div>
 
     <div class="rectangle">
       <span class="emoji">🚛</span>
       <h2 class="title">Transportadoras</h2>
+      <div class="options">
+        <a class="option cadastrar" href="#">Cadastrar</a>
+        <a class="option consultar" href="#">Consultar</a>
+      </div>
     </div>
   </div>
   <script src="script.js"></script>
-
-
 </body>
 
 </html>
