--- a/TelaInicial/CadastroeGerenciamentodeDados/index.html
+++ b/TelaInicial/CadastroeGerenciamentodeDados/index.html
@@ -22,8 +22,8 @@
       <span class="emoji">📦</span>
       <h2 class="title">Produtos</h2>
       <div class="options">
-        <a class="option cadastrar" href="#">Cadastrar</a>
-        <a class="option consultar" href="#">Consultar</a>
+        <a class="option produtocadastrar" href="produtos/produtosCadastrar/index.html">Cadastrar</a>
+        <a class="option produtoconsultar" href="produtos/produtosConsultar/index.html">Consultar</a>
       </div>
     </div>
 
