--- a/TelaInicial/CadastroeGerenciamentodeDados/index.html
+++ b/TelaInicial/CadastroeGerenciamentodeDados/index.html
@@ -31,8 +31,8 @@
       <span class="emoji">👥</span>
       <h2 class="title">Clientes</h2>
       <div class="options">
-        <a class="option cadastrar" href="#">Cadastrar</a>
-        <a class="option consultar" href="#">Consultar</a>
+        <a class="option clientescadastrar" href="clientes/clientescadastrar/index.html">Cadastrar</a>
+        <a class="option clientesconsultar" href="clientes/clientescadastrar/index.html">Consultar</a>
       </div>
     </div>
 
