--- a/TelaInicial/CadastroeGerenciamentodeDados/index.html
+++ b/TelaInicial/CadastroeGerenciamentodeDados/index.html
@@ -40,8 +40,8 @@
       <span class="emoji">💼</span>
       <h2 class="title">Operações Fiscais</h2>
       <div class="options">
-        <a class="option cadastrar" href="#">Cadastrar</a>
-        <a class="option consultar" href="#">Consultar</a>
+        <a class="option operacoesfiscaiscadastrar" href="operacoesfiscais/operacoesfiscaiscadastro/index.html">Cadastrar</a>
+        <a class="option operacoesfiscaisconsultar" href="operacoesfiscais/operacoesfiscaisconsulta/index.html">Consultar</a>
       </div>
     </div>
 
