--- a/TelaInicial/CadastroeGerenciamentodeDados/index.html
+++ b/TelaInicial/CadastroeGerenciamentodeDados/index.html
@@ -49,8 +49,8 @@
       <span class="emoji">🏢</span>
       <h2 class="title">Empresas</h2>
       <div class="options">
-        <a class="option cadastrar" href="#">Cadastrar</a>
-        <a class="option consultar" href="#">Consultar</a>
+        <a class="option empresascadastrar" href="empresas/empresascadastrar/index.html">empresas/</a>
+        <a class="option empresasconsultar" href="empresas/empresasconsultar/index.html">Consultar</a>
       </div>
     </div>
 
@@ -58,8 +58,8 @@
       <span class="emoji">🚚</span>
       <h2 class="title">Fornecedores</h2>
       <div class="options">
-        <a class="option cadastrar" href="#">Cadastrar</a>
-        <a class="option consultar" href="#">Consultar</a>
+        <a class="option fornecedorescadastrar" href="fornecedores/fornecedorescadastrar/index.html">Cadastrar</a>
+        <a class="option fornecedoresconsultar" href="fornecedores/fornecedoresconsultar/index.html">Consultar</a>
       </div>
     </div>
 
@@ -67,8 +67,8 @@
       <span class="emoji">📊</span>
       <h2 class="title">Plano de Contas</h2>
       <div class="options">
-        <a class="option cadastrar" href="#">Cadastrar</a>
-        <a class="option consultar" href="#">Consultar</a>
+        <a class="option planodecontascadastrar" href="planodecontas/planodecontascadastrar/index.html">Cadastrar</a>
+        <a class="option planodecontasconsultar" href="planodecontas/planodecontasconsultar/index.html">Consultar</a>
       </div>
     </div>
 
@@ -76,8 +76,8 @@
       <span class="emoji">🛠️</span>
       <h2 class="title">Serviços</h2>
       <div class="options">
-        <a class="option cadastrar" href="#">Cadastrar</a>
-        <a class="option consultar" href="#">Consultar</a>
+        <a class="option servicoscadastrar" href="servicos/servicoscadastrar/index.html">Cadastrar</a>
+        <a class="option servicosconsultar" href="servicos/servicosconsultar/index.html">Consultar</a>
       </div>
     </div>
 
@@ -85,8 +85,8 @@
       <span class="emoji">👨‍💼</span>
       <h2 class="title">Funcionários</h2>
       <div class="options">
-        <a class="option cadastrar" href="#">Cadastrar</a>
-        <a class="option consultar" href="#">Consultar</a>
+        <a class="option funcionarioscadastrar" href="funcionarios/funcionarioscadastrar/index.html">Cadastrar</a>
+        <a class="option funcionariosconsultar" href="funcionarios/funcionariosconsultar/index.html">Consultar</a>
       </div>
     </div>
 
@@ -94,8 +94,8 @@
       <span class="emoji">🚛</span>
       <h2 class="title">Transportadoras</h2>
       <div class="options">
-        <a class="option cadastrar" href="#">Cadastrar</a>
-        <a class="option consultar" href="#">Consultar</a>
+        <a class="option transportadorascadastrar" href="transportadoras/transportadorascadastrar/index.html">Cadastrar</a>
+        <a class="option transportadorasconsultar" href="transportadoras/transportadorasconsultar/index.html">Consultar</a>
       </div>
     </div>
   </div>
