--- a/TelaInicial/CadastroeGerenciamentodeDados/fornecedores/fornecedoresconsultar/index.html
+++ b/TelaInicial/CadastroeGerenciamentodeDados/fornecedores/fornecedoresconsultar/index.html
@@ -13,6 +13,68 @@
     <h1 class="logo">Supermercado Batista</h1>
     <button class="logout-btn">Sair</button>
   </header>
+
+
+  <div class="content-container">
+    <div class="container">
+      <h2 class="title">Consulta de empresas</h2>
+
+  <div class="search">
+    <input type="text" class="search-input" placeholder="Pesquisar">
+    <button class="search-btn">Buscar</button>
+  </div>
+
+  <table class="product-table">
+    <thead>
+      <tr>
+        <th>CNPJ</th>
+        <th>Nome</th>
+        <th>Produto</th>
+        <th>Tel</th>
+        <th>E-mail</th>
+        <th>Responsável</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td>01.001.001/0001-01</td>
+        <td>Cris LTDA.</td>
+        <td>Latícinios</td>
+        <td>00 00001-0002</td>
+        <td>teste@01.com</td>
+        <td>Júlio</td>
+      </tr>
+      <tr>
+        <td>02.002.002/0002-02</td>
+        <td>Juá SA</td>
+        <td>Pordutos de limpeza</td>
+        <td>02 00003-0004</td>
+        <td>teste@02.com</td>
+        <td>Bento</td>
+      </tr>
+      <tr>
+        <td>03.003.003/0003-03</td>
+        <td>Samyoung</td>
+        <td>Carnes</td>
+        <td>04 00005-0006</td>
+        <td>teste@03.com</td>
+        <td>Dinho</td>
+      </tr>   
+      <tr>
+        <td>04.004.004/0004-04</td>
+        <td>Sinduca</td>
+        <td>Não-Perecíveis</td>
+        <td>06 00007-0008</td>
+        <td>teste@04.com</td>
+        <td>Sérgio</td>
+      </tr>         
+        </tbody>
+  </table>
+</div>
+</div>
+</div>
+</div>
   
 <script src="script.js"></script>
 </body>
