--- a/TelaInicial/CadastroeGerenciamentodeDados/index.html
+++ b/TelaInicial/CadastroeGerenciamentodeDados/index.html
@@ -49,7 +49,7 @@
       <span class="emoji">🏢</span>
       <h2 class="title">Empresas</h2>
       <div class="options">
-        <a class="option empresascadastrar" href="empresas/empresascadastrar/index.html">empresas/</a>
+        <a class="option empresascadastrar" href="empresas/empresascadastrar/index.html">Cadastrar</a>
         <a class="option empresasconsultar" href="empresas/empresasconsultar/index.html">Consultar</a>
       </div>
     </div>
