--- a/TelaInicial/CadastroeGerenciamentodeDados/funcionarios/funcionarioscadastrar/index.html
+++ b/TelaInicial/CadastroeGerenciamentodeDados/funcionarios/funcionarioscadastrar/index.html
@@ -13,7 +13,34 @@
     <h1 class="logo">Supermercado Batista</h1>
     <button class="logout-btn">Sair</button>
   </header>
+
+  <div class="content-container">
   
+  <div class="container">
+
+    <h1>Cadastrar Plano de contas</h1>
+
+    <form id="employee-form">
+
+      <input type="text" id="nome" name="nome" placeholder="Digite o nome completo" required>
+
+      <input type="text" id="cargo" name="cargo" placeholder="Digite o cargo" required>
+
+      <input type="text" id="codigo" name="codigo" placeholder="Digite o Código" required>
+
+      <input type="tel" id="telefone" name="telefone" placeholder="Digite o telefone" required>
+
+      <input type="text" id="endereco" name="endereco" placeholder="Digite o endereço" required>
+
+      <div class="button-container">
+        <button type="submit">Cadastrar</button>
+      </div>
+
+    </form>    
+  </div>
+  </div>
+
+
 <script src="script.js"></script>
 </body>
 </html>
