--- a/TelaInicial/CadastroeGerenciamentodeDados/funcionarios/funcionariosconsultar/index.html
+++ b/TelaInicial/CadastroeGerenciamentodeDados/funcionarios/funcionariosconsultar/index.html
@@ -13,6 +13,58 @@
     <h1 class="logo">Supermercado Batista</h1>
     <button class="logout-btn">Sair</button>
   </header>
+
+
+  <div class="content-container">
+    <div class="container">
+      <h2 class="title">Consulta de Plano de Contas</h2>
+
+  <div class="search">
+    <input type="text" class="search-input" placeholder="Pesquisar">
+    <button class="search-btn">Buscar</button>
+  </div>
+
+  <table class="product-table">
+    <thead>
+      <tr>
+        <th>Código</th>
+        <th>Nome</th>
+        <th>Cargo</th>
+        <th>Telefone</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td>1992</td>
+        <td>Mark Hoppus</td>
+        <td>Vocalista</td>
+        <td>19 9220-0520</td>
+      </tr>
+      <tr>
+        <td>1998</td>
+        <td>Travis Barker</td>
+        <td>Bateria</td>
+        <td>19 9820-0520</td>
+      </tr>
+      <tr>
+        <td>2015</td>
+        <td>Matt Skiba</td>
+        <td>Guitarrista</td>
+        <td>20 1520-2022</td>
+      </tr>   
+      <tr>
+        <td>2022</td>
+        <td>Tom DeLonge</td>
+        <td>Guitarra</td>
+        <td>19 9220-0520</td>
+      </tr>         
+        </tbody>
+  </table>
+</div>
+</div>
+</div>
+</div>
   
 <script src="script.js"></script>
 </body>
