--- a/TelaInicial/CadastroeGerenciamentodeDados/planodecontas/planodecontasconsultar/index.html
+++ b/TelaInicial/CadastroeGerenciamentodeDados/planodecontas/planodecontasconsultar/index.html
@@ -13,6 +13,58 @@
     <h1 class="logo">Supermercado Batista</h1>
     <button class="logout-btn">Sair</button>
   </header>
+
+
+  <div class="content-container">
+    <div class="container">
+      <h2 class="title">Consulta de Plano de Contas</h2>
+
+  <div class="search">
+    <input type="text" class="search-input" placeholder="Pesquisar">
+    <button class="search-btn">Buscar</button>
+  </div>
+
+  <table class="product-table">
+    <thead>
+      <tr>
+        <th>Código</th>
+        <th>Nome</th>
+        <th>Tipo</th>
+        <th>Descrição</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td>1001</td>
+        <td>Caixa</td>
+        <td>Passivo</td>
+        <td>Conta de Caixa da Empresa</td>
+      </tr>
+      <tr>
+        <td>2005</td>
+        <td>Fornecedores</td>
+        <td>Passivo</td>
+        <td>Contas a pagar aos fornecedores</td>
+      </tr>
+      <tr>
+        <td>4001</td>
+        <td>Vendas de Produtos</td>
+        <td>Receita</td>
+        <td>Receita proveniente da venda de produtos</td>
+      </tr>   
+      <tr>
+        <td>6002</td>
+        <td>Despesas com Salários</td>
+        <td>Despesa</td>
+        <td>Gastos com os salários dos funcionários</td>
+      </tr>         
+        </tbody>
+  </table>
+</div>
+</div>
+</div>
+</div>
   
 <script src="script.js"></script>
 </body>
