--- a/TelaInicial/CadastroeGerenciamentodeDados/transportadoras/transportadorascadastrar/index.html
+++ b/TelaInicial/CadastroeGerenciamentodeDados/transportadoras/transportadorascadastrar/index.html
@@ -13,7 +13,32 @@
     <h1 class="logo">Supermercado Batista</h1>
     <button class="logout-btn">Sair</button>
   </header>
+
+  <div class="content-container">
   
+  <div class="container">
+
+    <h1>Cadastrar Plano de contas</h1>
+
+    <form id="employee-form">
+
+      <input type="text" name="nome" placeholder="Nome da Transportadora" required>
+
+      <input type="text" name="cnpj" placeholder="CNPJ da Transportadora" required>
+
+      <input type="tel" name="telefone" placeholder="Telefone de Contato" required>
+
+      <input type="text" name="valor_frete" placeholder="Valor do Frete" required>
+
+      <div class="button-container">
+        <button type="submit">Cadastrar</button>
+      </div>
+
+    </form>    
+  </div>
+  </div>
+
+
 <script src="script.js"></script>
 </body>
 </html>
