--- a/TelaInicial/CadastroeGerenciamentodeDados/servicos/servicosconsultar/index.html
+++ b/TelaInicial/CadastroeGerenciamentodeDados/servicos/servicosconsultar/index.html
@@ -13,6 +13,60 @@
     <h1 class="logo">Supermercado Batista</h1>
     <button class="logout-btn">Sair</button>
   </header>
+
+
+  <div class="content-container">
+    <div class="container">
+      <h2 class="title">Consulta de Plano de Contas</h2>
+
+  <div class="search">
+    <input type="text" class="search-input" placeholder="Pesquisar">
+    <button class="search-btn">Buscar</button>
+  </div>
+
+  <table class="product-table">
+    <thead>
+      <tr>
+        <th>Código</th>
+        <th>Nome</th>
+        <th>Preço</th>
+        <th>Descrição</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td>001</td>
+        <td>Manutenção de Computadores</td>
+        <td>150,00</td>
+        <td>Serviço de manutenção e reparo de computadores e dispositivos eletrônicos.
+        </td>
+      </tr>
+      <tr>
+        <td>002</td>
+        <td>Limpeza Residencial</td>
+        <td>200,00</td>
+        <td>Contas a pagar aos fornecedores</td>
+      </tr>
+      <tr>
+        <td>003</td>
+        <td>Consultoria Financeira</td>
+        <td>500,00</td>
+        <td>Serviço de consultoria especializada em planejamento financeiro pessoal e empresarial.</td>
+      </tr>   
+      <tr>
+        <td>004</td>
+        <td>Serviço de Design Gráfico</td>
+        <td>350,00</td>
+        <td>Criação de designs personalizados para marcas, logotipos, materiais de marketing, etc.
+        </td>
+      </tr>         
+        </tbody>
+  </table>
+</div>
+</div>
+</div>
+</div>
   
 <script src="script.js"></script>
 </body>
