--- a/TelaInicial/CadastroeGerenciamentodeDados/transportadoras/transportadorasconsultar/index.html
+++ b/TelaInicial/CadastroeGerenciamentodeDados/transportadoras/transportadorasconsultar/index.html
@@ -13,6 +13,58 @@
     <h1 class="logo">Supermercado Batista</h1>
     <button class="logout-btn">Sair</button>
   </header>
+
+
+  <div class="content-container">
+    <div class="container">
+      <h2 class="title">Consulta de Plano de Contas</h2>
+
+  <div class="search">
+    <input type="text" class="search-input" placeholder="Pesquisar">
+    <button class="search-btn">Buscar</button>
+  </div>
+
+  <table class="product-table">
+    <thead>
+      <tr>
+        <th>CNPJ</th>
+        <th>Nome</th>
+        <th>Telefone</th>
+        <th>Valor</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td>01.001.001/0001-01</td>
+        <td>Talus</td>
+        <td>19 9220-0520</td>
+        <td>1000,00</td>
+      </tr>
+      <tr>
+        <td>02.002.002/0002-02</td>
+        <td>Lipus</td>
+        <td>19 9820-0520</td>
+        <td>1500,00</td>
+      </tr>
+      <tr>
+        <td>03.003.003/0003-03</td>
+        <td>Matt Skiba</td>
+        <td>20 1520-2022</td>
+        <td>2200,00</td>
+      </tr>   
+      <tr>
+        <td>04.004.004/0004-04</td>
+        <td>Palos</td>
+        <td>19 9220-0520</td>
+        <td>3333,00</td>
+      </tr>         
+        </tbody>
+  </table>
+</div>
+</div>
+</div>
+</div>
   
 <script src="script.js"></script>
 </body>
