--- a/TelaInicial/OperacoesFincanceiras/index.html
+++ b/TelaInicial/OperacoesFincanceiras/index.html
@@ -20,13 +20,13 @@
             <span class="emoji">💰</span>
             <h2 class="title">Movimentação Financeira</h2>
             <div class="options">
-                <a class="option produtocadastrar" href="produtos/produtosCadastrar/index.html">Cadastrar</a>
-                <a class="option produtoconsultar" href="produtos/produtosConsultar/index.html">Consultar</a>
+                <a class="option movimentacoesfinanceirascadastrar" href="movimentacoesfinanceiras/movimentacoesfinanceirascadastrar/index.html">Cadastrar</a>
+                <a class="option movimentacoesfinanceirasconsultar" href="movimentacoesfinanceiras/movimentacoesfinanceirasconsultar/index.html">Consultar</a>
             </div>
         </div>
 
         <div class="rectangle">
-            <a class="link" href="caminho/para/fechamento-de-caixa.html">
+            <a class="link" href="fechamentodecaixa/index.html">
               <span class="emoji">🔒</span>
               <h2 class="title">Fechamento de Caixa</h2>
             </a>
