--- a/TelaInicial/OrdensdeServico/consultar/index.html
+++ b/TelaInicial/OrdensdeServico/consultar/index.html
@@ -17,7 +17,7 @@
 
   <div class="content-container">
     <div class="container">
-      <h2 class="title">Consulta de Orçamento</h2>
+      <h2 class="title">Consulta de Ordens de Serviço</h2>
 
   <div class="search">
     <input type="text" class="search-input" placeholder="Pesquisar">
@@ -27,31 +27,37 @@
   <table class="product-table">
     <thead>
       <tr>
-        <th>Nome</th>
-        <th>Produtos</th>
-        <th>Valor</th>
+        <th>Número</th>
+        <th>Cliente</th>
+        <th>Descrição</th>
         <th>Data</th>
       </tr>
     </thead>
 
     <tbody>
       <tr>
-        <td>José</td>
-        <td>Perfume, Chocolate</td>
-        <td>R$100,00</td>
-        <td>12/11/21</td>
+        <td>0001</td>
+        <td>Mark Hoppus</td>
+        <td>Pagamento de multa</td>
+        <td>01/01/01</td>
       </tr>
       <tr>
-        <td>Maria</td>
-        <td>Sabonete, calculadora</td>
-        <td>R$ 36,00</td>
-        <td>01/01/22</td>
+        <td>0002</td>
+        <td>Travis Barker</td>
+        <td>Adiantamento</td>
+        <td>05/05/05</td>
       </tr>
       <tr>
-        <td>Israel da Silva Batista</td>
-        <td>Ákcool, Caderno</td>
-        <td>R$ 20,00</td>
-        <td>14/06/23</td>
+        <td>0003</td>
+        <td>Matt Skiba</td>
+        <td>Troca</td>
+        <td>07/07/07</td>
+      </tr>   
+      <tr>
+        <td>0004</td>
+        <td>Tom DeLonge</td>
+        <td>Contratação</td>
+        <td>09/09/09</td>
       </tr>         
         </tbody>
   </table>
