--- a/TelaInicial/telaInicial.html
+++ b/TelaInicial/telaInicial.html
@@ -59,7 +59,7 @@
       </div>
     </a>
 
-    <a href="GerenciamentodeServicos/index.html">
+    <a href="OrdensdeServico/index.html">
       <div class="rectangle">
         <div class="emoji">⚙️</div>
         <div class="content">
