--- a/TelaInicial/OrcamentoseNotasFiscais/orcamentos/orcamentoconsultar/index.html
+++ b/TelaInicial/OrcamentoseNotasFiscais/orcamentos/orcamentoconsultar/index.html
@@ -48,8 +48,8 @@
         <td>01/01/22</td>
       </tr>
       <tr>
-        <td>Israel da Silva Batista</td>
-        <td>Ákcool, Caderno</td>
+        <td>João</td>
+        <td>Mochila, Caderno</td>
         <td>R$ 20,00</td>
         <td>14/06/23</td>
       </tr>         
